<resources>
    <string name="app_name">Finflux</string>
    <string name="db_name">finflux</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="url">IP Address/URL</string>
    <string name="port">Port Number</string>
    <string name="tenant">Tenant Identifier</string>
    <string name="save">Save</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_application_setup">ApplicationSetup</string>
    <string name="hello_world">Hello world!</string>
    <string name="activate">Activate</string>
    <string name="activation_key">Activation Key</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_application_activation">ApplicationActivation</string>
    <string name="title_sliding_activity">Finflux</string>

    <string name="title_collection_sheet_activity">Collection Sheet Activity</string>
    <string name="title_create_client_activity">Create Client Activity</string>

    //login strings
    <string name="url_error_empty">Please provide valid url/ip address.</string>
    <string name="tenant_error_empty">Please provide valid tenant identifier.</string>
    <string name="organization_name">Organization Name</string>
    <string name="error_organization_name">Please provide your organization name.</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="copy_right">\u00a9 2016 Conflux. All rights reserved</string>
    <string name="no_password">Password cannot be empty.</string>
    <string name="no_username">enter a valid username.</string>
    <string name="error_unknown">There was some error processing your request.</string>

    <!-- General Terms Begin Here -->
    <string name="collections">Collection Sheet</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="offline">Offline *</string>
    <string name="entity_name">Entity Name</string>
    <string name="attendence">Attendence</string>
    <string name="client_id">ClientId</string>
    <string name="meeting_time">Time</string>
    <string name="meeting_location">Location</string>
    <string name="client_name">ClientName</string>
    <string name="product_name">ProductName</string>
    <string name="network.offline">No Internet Connection...</string>


    //logout
    <string name="logout">Logout</string>

    //Settings
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_application_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- settings  -->
    <string name="pref_header_collectionsheet">Collectionsheet Print Settings</string>
    <string name="dialog_turn_on_printing_device">Please turn on Printer and then click Ok.</string>
    <string name="error_select_paired_device">Please Select Paired device.</string>
    <string name="alert_message">Alert</string>
    <string name="select_blue_tooth_device">Select Bluetooth paired device</string>
    <string name="enable_peripherals">enable_peripherals</string>

    <!--  settings  -->
    <string name="pref_header_device">Device Settings</string>

    <string name="error_connecting_printer">Unable to connect printer.</string>

    <string name="pref_title_enable_peripherals">Enable Peripheral</string>
    <string name="pref_title_enable_client_copy_collection_receipt">Print client copy of collection receipt.</string>
    <string name="pref_title_enable_office_copy_collection_receipt">Print office copy of collection receipt.</string>
    <string name="peripheral_enable">Peripheral Enabled</string>
    <string name="peripheral_diabled">Peripheral Disabled</string>
    <string name="error_enable_printer">Please go to Settigns -> Device Settings and enable printer.</string>

    <string name="pref_title_enable_printer">Enable Printer</string>
    <string name="pref_ringtone_silent">Silent</string>


    <!--offline strings starts here-->
    <string name="item.lable.fetch.collection">Fetch Collections</string>
    <string name="item.lable.push.collection">Push Collections</string>
    <string name="title_activity_offline_management">Offline Management</string>
    <string name="title_activity_fetch_collection">FetchCollection</string>
    <string name="menu_change_current_date">Date Settings</string>
    <string name="error.offline.date.range.exception">You can Download Collection meeting for only</string>
    <string name="offline.center.list.date">Date</string>
    <string name="offline.center.list.day">Day</string>
    <string name="title.center.name">Center</string>
    <string name="label.center.total.due">Total due</string>
    <string name="label.center.total.collected">Total Collected</string>
    <string name="offline.center.status">Status</string>
    <string name="collection.status.can.download">Available to Download</string>
    <string name="button.label.download">Download</string>
    <string name="center.download.status.already.downloaded">Center already Downloaded</string>
    <string name="center.download.status.center.no.collection">Center has no collection</string>
    <string name="center.download.status.center.collection.completed">Center Collection Completed</string>
    <string name="center.download.status.downloaded.successfully">Downloaded Successfully</string>

    <!--datepicker fragment-->
    <string name="button.submit">Submit</string>

    <!--error dialog fragment-->
    <string name="error_message">Error Message</string>
    <string name="bt_ok">Okay</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_save">Save</string>
    <string name="bt_next">Next</string>
    <string name="alert">Alert</string>
    <string name="please_wait">Please wait....</string>

    <!-- Collection sheet strings -->
    <string name="collection_sheet">Collection Sheet</string>
    <string name="no_collection_sheet">There is no collection for Date</string>
    <string name="today_collection">Collected</string>
    <string name="collection_due">Due</string>
    <string name="center_meeting">center meeting</string>
    <string name="center_name">Center Name</string>
    <string name="small_text">Small Text</string>
    <string name="collection.sheet.save.successfull">Collection sheet saved successfully.</string>

    <!-- create client string -->
    <string name="create_client">Create Client</string>
    <string name="create_new_client">Create New Client</string>
    <string name="create_address">Create Address</string>
    <string name="auto_fill">Auto Fill</string>
    <string name="fname">First Name</string>
    <string name="mname">Middle Name</string>
    <string name="lname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="mobileNumb">Mobile Number</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_taluka">Select Taluka</string>
    <string name="select_addressType">Select Address</string>
    <string name="gender">Gender</string>
    <string name="address_type">AddressType</string>
    <string name="house">House No</string>
    <string name="street">Street</string>
    <string name="taluk">Taluk</string>
    <string name="village">Village</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>


    //aadhar services strings
    <string name="Aadhar_service">Create Client Using Aadhar Service </string>
    <string name="choose_formats">choose_formats</string>
    <string name="select_camera">select_camera</string>
    <string name="flash_on">flash_on</string>
    <string name="flash_off" >flash_off</string>
    <string name="auto_focus_on">focus_on</string>
    <string name="auto_focus_off">focus_off</string>
    <string name="formats">formats</string>

    //client required fields
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>


    <string-array name="scan_choice">
        <item>QRCODE SCAN</item>
        <item>OTP</item>
        <item>FINGER PRINT</item>
    </string-array>


</resources>


