
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_client_info"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_client_name"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/FormHeader"
            android:text="@string/client_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_client_name"
            android:id="@+id/tv_client_id"
            style="@style/FormHeader"
            android:textSize="15sp"
            android:text="@string/client_id"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ll_client_info"
        android:id="@+id/view_seperator"
        android:background="@color/finflux_theme_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/view_seperator"
        android:layout_marginTop="10dp"
        android:id="@+id/ll_attendance"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/attendance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attendence"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/spinner_style"
            android:id="@+id/sp_attendance"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_header"
        android:layout_marginTop="10dp"
        android:layout_below="@id/ll_attendance"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/collection_due"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/today_collection"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/lv_loan_repayments"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:weightSum="2"
            android:layout_below="@id/lv_loan_repayments"
            android:orientation="horizontal"
            android:id="@+id/ll_buttons">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_cancel"
                android:id="@+id/btn_cancel"
                style="@style/standard_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:id="@+id/btn_save"
                style="@style/standard_button"/>
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>